--- a/EM_tutorial_DK.ipynb
+++ b/EM_tutorial_DK.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "import torch # torch cuda setting check\n",
     "import time\n",
     "import cortex\n",
     "import numpy as np\n",
