--- a/EM_tutorial_DK.ipynb
+++ b/EM_tutorial_DK.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define and Run banded ridge regression model"
+    "## Define and Run voxelwise encoding model"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### multiple feature spaces"
+    "### multiple feature spaces with banded ridge regression"
    ]
   },
   {
